@@ -3,6 +3,7 @@ Revision history for Perl extension AnyEvent.
 	- provide more documentation for the resolver class.
         - really replace longest run of :0: by :: in format_address,
           also properly convert :: and ::1 again.
+        - support naptr name and decode it
 
 4.1  Thu May 29 05:45:40 CEST 2008
 	- INCOMPATIBLE CHANGE: renamed xxx_ip functions to xxx_address
